# chatroom

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  agent_registry.py  agents.py  artifacts.py  connector_agents.py  database.py  errors.py  main.py  observability.py  routing.py  settings.py  storage.py  tool_registry.py  turn_report.py
backend/app/api/: agents.py  connectors.py  conversations.py  custom_agents.py  datasets.py  health.py  providers.py  tools.py
backend/tests/: conftest.py  test_agents.py  test_agents_api.py  test_artifacts.py  test_connector_agents.py  test_connectors_api.py  test_conversation_management_api.py  test_conversations_api.py  test_csv_schema.py  test_custom_agent_supervisor.py  test_custom_agents_api.py  test_datasets_api.py  test_external_api_connector.py  test_health.py  test_imported_dataset.py  test_live_provider_smoke.py  test_lookup_account_tool.py  test_provider_health_api.py  test_providers.py  test_snowflake_connector.py  test_snowflake_tool.py  test_storage_artifacts.py  test_storage_conversation_management.py  test_storage_conversations.py  test_storage_custom_agents.py  test_storage_group_chat_events.py  test_storage_imported_datasets.py  test_storage_messages.py  test_storage_persistence.py  test_storage_schema.py  test_storage_tool_traces.py  test_supervisor.py  test_tools.py  test_tools_api.py  test_turn_report.py
backend/tools/: __init__.py  base.py  chart.py  csv_schema.py  imported_dataset.py  lookup_account.py  registry.py  snowflake_query.py  summarize.py
(+55 files in other folders)
