[project]
name = "chatroom-backend"
version = "0.1.0"
description = "FastAPI backend for the ChatRoom teaching project."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43,<2.0",
    "fastapi>=0.115,<1.0",
    "ollama>=0.6.2",
    "openai>=2.43.0",
    "python-dotenv>=1.0,<2.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.34,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
]
snowflake = [
    "snowflake-connector-python>=3.12,<4.0",
]
